2025-06 Feature Update for Version Next (5.0.x)

--- a/css/style.css
+++ b/css/style.css
@@ -3090,12 +3090,12 @@ h4.stn:hover {
     cursor: pointer;
 }
 
-.uptime-bar.up {
+.uptime-bars .uptime-bar.up {
     background: #acc7ff;
     height: 40px;
 }
 
-.uptime-bar.down {
+.uptime-bars .uptime-bar.down {
     background: #f44336;
     height: 40px;
 }
