2025-06 Feature Update for Version Next (5.0.x)

--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -391,7 +391,7 @@ body.dark-mode .swiper-button-prev:hover {
 
 /* ------------------------------------------ */
 
-/* ------------------------------------------ 2.0 Statistics/Past Records Page ------------------------------------------ */
+/* ------------------------------------------ 2.0 Statistics/Incident History Page ------------------------------------------ */
 body.dark-mode header {
     position: fixed;
     top: 0;
