--- a/css/dark-mode-leg.css
+++ b/css/dark-mode-leg.css
@@ -265,7 +265,7 @@ body.dark-mode .alert-dismissible .btn-close {
 
 /* ------------------------------------------ */
 
-/* ------------------------------------------ 2.0 Statistics/Past Records Page ------------------------------------------ */
+/* ------------------------------------------ 2.0 Statistics/Incident History Page ------------------------------------------ */
 body.dark-mode .card-header {
     background-color: #484a4b;
 }
