--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -402,8 +402,8 @@ body.dark-mode header {
     justify-content: space-between;
     align-items: center;
     z-index: 5;
-    background: #0c0c0cbb;
-    box-shadow: 0 4px 30px #070707e8;
+    background: #070707e8;
+    box-shadow: 0 4px 30px #0000001a;
     backdrop-filter: blur(5px);
     transition: all 0.5s ease;
 }
@@ -588,7 +588,7 @@ body.dark-mode #lo {
 
 
 body.dark-mode .wbnrfz_details_blog {
-    background: #0c0c0cc7;
+    background: #0c0c0ccc;;
     box-shadow: 0 4px 30px #0000001a;
     backdrop-filter: blur(10px);
     margin-top: 1em;
