--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -91,6 +91,30 @@ body.dark-mode .fa-square-x-twitter {
     color: #fff;
 }
 
+body.dark-mode .collapsible-header {
+    background-color: #5f7cb4;
+    color: #fff;
+}
+
+body.dark-mode .collapsible-header:hover {
+    background-color: #21295c;
+    color: #fff;
+}
+
+body.dark-mode .nav-chev {
+    color: #fff;
+}
+
+@keyframes pulse-animation {
+    0% {
+        box-shadow: 0 0 0 0px #8d8d8d6b;
+    }
+
+    100% {
+        box-shadow: 0 0 0 20px #00000000;
+    }
+}
+
 /* ---- */
 
 /* ---- Footer */
@@ -327,7 +351,7 @@ body.dark-mode .card-ri-active {
 }
 
 body.dark-mode .card-ri {
-    background-color: #242526;
+    background-color: #1e2025;
     padding: 0rem;
     border-radius: 25px;
 
@@ -402,7 +426,7 @@ body.dark-mode header {
     justify-content: space-between;
     align-items: center;
     z-index: 5;
-    background: #070707e8;
+    background: #111318f1;
     box-shadow: 0 4px 30px #0000001a;
     backdrop-filter: blur(5px);
     transition: all 0.5s ease;
@@ -426,10 +450,10 @@ body.dark-mode .nav-item:hover {
 
 body.dark-mode .nav-item.active {
     font-weight: bold;
-    border-bottom: 2px solid #7b7c64;
+    border-bottom: 2px solid #5470a6;
     text-decoration: none;
     line-height: 40px;
-    color: #a2a390;
+    color: #5470a6;
 }
 
 body.dark-mode .nav-item-toggle {
@@ -447,12 +471,12 @@ body.dark-mode .nav-item-toggle::after {
 }
 
 body.dark-mode .icons i {
-    color: #ededf4fff;
+    color: #fff;
 }
 
 body.dark-mode #menu-icon,
 body.dark-mode #close-icon {
-    color: #ededf4fff;
+    color: #fff;
     font-size: 30px;
 }
 
@@ -495,14 +519,19 @@ body.dark-mode .section-padding-80-0 {
     background-color: #18191a;
 }
 
+body.dark-mode .wbnrfz_details {
+    background-color: #111318;
+    transition: all 0.5s ease;
+}
+
 body.dark-mode .wbnrfz-summ {
     background-color: #161616;
     transition: all 0.5s ease;
 }
 
 body.dark-mode span,
-body.dark-mode .wbnrfz_details .details_catagory_wrap .single_catagory h4,
-body.dark-mode .wbnrfz_details .details_catagory_wrap .single_catagory .social_links a {
+body.dark-mode #portfolioFilter .details_catagory_wrap .single_catagory h4,
+body.dark-mode #portfolioFilter .details_catagory_wrap .single_catagory .social_links a {
     color: #ededf4;
 }
 
@@ -588,10 +617,10 @@ body.dark-mode #lo {
 
 
 body.dark-mode .wbnrfz_details_blog {
-    background: #0c0c0ccc;;
+    background: #111318cc;
     box-shadow: 0 4px 30px #0000001a;
     backdrop-filter: blur(10px);
-    margin-top: 1em;
+    margin-top: 0em;
     padding-top: 3em;
     padding-bottom: 3em;
     /* mask-image: linear-gradient(to bottom, white calc(100% - 32px), transparent 100%); */
@@ -619,7 +648,7 @@ body.dark-mode .breadcrumb-item+.breadcrumb-item::before {
 
 /*  */
 body.dark-mode .card-in {
-    background-color: #242526;
+    background-color: #1e2025;
     padding: 0rem;
     border-radius: 25px;
     margin-top: 2em;
@@ -638,8 +667,8 @@ body.dark-mode .nav-tabs .nav-link {
 
 body.dark-mode .nav-link.active {
     color: #000 !important;
-} 
+}
 
 body.dark-mode .nav-link.active:hover {
     color: #fff !important;
-} 
+}
