--- a/css/style.css
+++ b/css/style.css
@@ -373,7 +373,7 @@ h6 {
 .section-padding-80-0 {
     padding-top: 80px;
     padding-bottom: 80px;
-    background-color: #e9eae5;
+    background-color: #f9f9ff;
 }
 
 .section-padding-80-50 {
@@ -731,7 +731,7 @@ header {
 
 #hero {
     width: 100%;
-    height: 100vh;
+    height: 50vh;
     background: url("../img/bg-img/hero.png") top right no-repeat;
     background-size: cover;
     position: relative;
@@ -1097,7 +1097,7 @@ header {
 }
 
 .about-me-summ {
-    background-color: #e9eae5;
+    background-color: #fcfcfc;
     padding-top: 0px;
     padding-bottom: 0px;
 }
@@ -2814,7 +2814,7 @@ h4.stn:hover {
 }
 
 .swiper-pagination-bullet-active {
-    background-color: #acc7ff;
+    background-color: #debcdf;
 }
 
 /* Use only the icon, hide Swiper's default arrow */
