2025-06 Feature Update for Version Next (5.0.x)

--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -432,6 +432,10 @@ body.dark-mode .swiper-button-prev:hover {
     color: #fff;
 }
 
+body.dark-mode div.line {
+    color: #fff;
+}
+
 /* ------------------------------------------ */
 
 /* ------------------------------------------ 2.0 Statistics/Incident History Page ------------------------------------------ */
