--- a/css/style.css
+++ b/css/style.css
@@ -2394,6 +2394,10 @@ h4.stn:hover {
     border-top: 1px solid #dee2e6;
 }
 
+div.line {
+    color: #000;
+}
+
 /* ------------------------------------------ */
 
 /* ------------------------------------------ 18.0 Lines Indiv Page ------------------------------------------ */
