--- a/css/style-breakpoints.css
+++ b/css/style-breakpoints.css
@@ -242,13 +242,18 @@
         max-width: 720px;
     }
 
+    .container-collapsible {
+        max-width: 720px;
+        max-height: 77vh;
+    }
+
     .section-heading h2 {
         font-size: 24px;
     }
 
     #scrollUp {
         right: 20px;
-        bottom: 50px;
+        bottom: 55px;
     }
 
 
@@ -400,11 +405,12 @@
 
 
     .footer-content .copywrite-text p {
-        font-size: 16px;
+        font-size: 13px;
+        text-align: center;
     }
 
     .footer-content .copywrite-text p a {
-        font-size: 16px;
+        font-size: 13px;
     }
 
     .footer-content .footer-logo a img {
@@ -412,7 +418,7 @@
     }
 
     .footer-content .social-info a {
-        font-size: 16px;
+        font-size: 15px;
     }
 
     .single-software-item .instagram-hover-content a span {
@@ -493,11 +499,21 @@
     }
 
     .wbnrfz_details_blog {
+        background: #ffffffe0;
+        box-shadow: 0 4px 30px #0000001a;
+        backdrop-filter: blur(10px);
+        margin-top: 0em !important;
+        padding-top: 3em !important;
+        padding-bottom: 2em;
+        /* mask-image: linear-gradient(to bottom, white calc(100% - 32px), transparent 100%); */
+    }
+
+    body.dark-mode .wbnrfz_details_blog {
         background: #111318ab;
         box-shadow: 0 4px 30px #0000001a;
         backdrop-filter: blur(10px);
         margin-top: 0em !important;
-        padding-top: 3em;
+        padding-top: 3em !important;
         padding-bottom: 2em;
         /* mask-image: linear-gradient(to bottom, white calc(100% - 32px), transparent 100%); */
     }
