2025-06 Cumulative Update for Version 5.1 (5.1.X)

--- a/css/style.css
+++ b/css/style.css
@@ -2556,7 +2556,10 @@ select:focus {
 #icon-assets,
 #brainstorm,
 #psrith,
-#cckint {
+#cckint,
+#br-diag,
+#bat,
+#tv {
     scroll-margin-top: 10vh;
 }
 
