2025-07 Feature Update for Version Next (5.1.0)

--- a/css/style.css
+++ b/css/style.css
@@ -1441,6 +1441,12 @@ img.profile-pic {
     padding-top: 50px;
 }
 
+#ls {
+    background-color: #f9f9ffff;
+    padding-top: 50px;
+    padding-bottom: 20px;
+}
+
 #io {
     background-color: #f9f9ffff;
     padding-top: 00px;
