--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -186,17 +186,31 @@ body.dark-mode #lrd {
     transition: all 0.5s ease;
 }
 
+body.dark-mode #ls {
+    background-color: #111318;
+    padding-top: 50px;
+    padding-bottom: 20px;
+    transition: all 0.5s ease;
+}
+
 body.dark-mode #io {
     background-color: #111318;
     padding-top: 50px;
-    transition: all 0.5s ease;
     padding-bottom: 20px;
+    transition: all 0.5s ease;
 }
 
 body.dark-mode .alert-primary {
     background-color: #082249;
     color: #5294e4;
     border-color: #084298;
+    transition: all 0.5s ease;
+}
+
+body.dark-mode .alert-success {
+    background-color: #051b11;
+    color: #75b798;
+    border-color: #0f5132;
     transition: all 0.5s ease;
 }
 
