--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -458,6 +458,12 @@ body.dark-mode div.line {
     color: #fff;
 }
 
+body.dark-mode .advisory {
+    margin-top: 8px;
+    font-size: 12px;
+    color: #ea8e8e;
+}
+
 /* ------------------------------------------ */
 
 /* ------------------------------------------ 2.0 Statistics/Incident History Page ------------------------------------------ */
