--- a/css/style.css
+++ b/css/style.css
@@ -2015,6 +2015,12 @@ canvas#delays-overview-sb-23 {
     content: url('../img/core-img/sbstl.png');
 }
 
+.advisory {
+    margin-top: 8px;
+    font-size: 12px;
+    color: #d42e12;
+}
+
 
 /* ------------------------------------------ */
 
