--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -462,6 +462,12 @@ body.dark-mode .advisory {
     margin-top: 8px;
     font-size: 12px;
     color: #ea8e8e;
+    line-height: 17px;
+}
+
+body.dark-mode .advisory a {
+    font-size: 12px;
+    color: #ea8e8e;
 }
 
 /* ------------------------------------------ */
